<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompletedTodoActivity">


    <TextView
        android:id="@+id/itemContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/textItemContent"
        android:layout_width="300sp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:text="@string/TextItemContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemContentTextView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/unMarkDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="468dp"
        android:text="@string/unMarkDoneButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textItemContent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textTimeItemCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/time_item_created_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unMarkDoneButton"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTimeLastModifiedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_last_modified_item_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/textTimeItemCreated"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="@id/textTimeItemCreated"
        app:layout_constraintTop_toBottomOf="@id/textTimeItemCreated"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="164dp"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTimeLastModifiedItem"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>

