<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6EAFD3"
    tools:context=".NotCompletedTodoActivity">


    <TextView
        android:id="@+id/itemContentTextView"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/editTextItemContent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/item_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@id/itemContentTextView"
        app:layout_constraintTop_toBottomOf="@id/itemContentTextView"
        app:layout_constraintVertical_bias="0.072"
        android:inputType="text" />

    <TextView
        android:id="@+id/timeItemCreatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/time_item_created_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextItemContent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTimeItemCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/timeItemCreatedTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/timeItemCreatedTextView"
        app:layout_constraintStart_toEndOf="@id/timeItemCreatedTextView" />

    <TextView
        android:id="@+id/timeLastModifiedItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_last_modified_item_text"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/timeItemCreatedTextView"
        app:layout_constraintTop_toBottomOf="@id/timeItemCreatedTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textTimeLastModifiedItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/time"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/timeLastModifiedItemTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/timeLastModifiedItemTextView" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:text="@string/apply_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeLastModifiedItemTextView"
        app:layout_constraintVertical_bias="0.152"  />



    <Button
        android:id="@+id/doneItemButton"
        android:layout_width="95dp"
        android:layout_height="51dp"
        android:text="@string/done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applyButton" />
</androidx.constraintlayout.widget.ConstraintLayout>